--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -5,7 +5,7 @@
     colors="true"
 >
     <testsuites>
-        <testsuite name="WordPress Pay TargetPay Test Suite">
+        <testsuite name="WordPress Pay Adyen Test Suite">
             <directory>./tests/</directory>
         </testsuite>
     </testsuites>
