--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wp-pay-gateways/adyen",
+  "name": "adyen",
   "version": "1.0.0",
   "description": "Adyen driver for the WordPress payment processing library.",
   "repository": {
