--- a/package.json
+++ b/package.json
@@ -26,16 +26,16 @@
       "url": "http://www.remcotolsma.nl/"
     }
   ],
-  "license": "GPL",
+  "license": "GPL-3.0",
   "bugs": {
     "url": "https://github.com/wp-pay-gateways/adyen/issues"
   },
   "homepage": "http://www.wp-pay.org/gateways/adyen/",
   "devDependencies": {
     "grunt": "~0.4.2",
-    "grunt-phplint": "0.0.5",
+    "grunt-phplint": "0.0.6",
     "grunt-phpmd": "^0.1.0",
-    "grunt-phpcs": "^0.2.2",
-    "grunt-contrib-jshint": "^0.10.0"
+    "grunt-phpcs": "^0.4.0",
+    "grunt-contrib-jshint": "^0.11.3"
   }
 }
