--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
 	"require": {
 		"php": ">=5.2.4",
 		"xrstf/composer-php52": "1.*",
-		"wp-pay/core": "dev-develop"
+		"wp-pay/core": "^1.3.1"
 	},
 	"require-dev": {
 		"phpmd/phpmd": "^2.2.3",
