--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,34 @@
+dist: trusty
+
 sudo: false
 
 language: php
 
+php:
+- 5.4
+- 5.5
+- 5.6
+- 7.0
+- 7.1
+- 7.2
+- nightly
+- hhvm
+
 matrix:
   include:
-    - php: 5.2
-      env: WP_VERSION=latest WP_MULTISITE=1
-    - php: 5.2
-      env: WP_VERSION=4.0 WP_MULTISITE=1
     - php: 5.3
-      env: WP_VERSION=4.0
-    - php: 5.4
-      env: WP_VERSION=4.0
-    - php: 5.5
-      env: WP_VERSION=4.0
+      dist: precise
+      env: TRAVIS_DIST_PRECISE=1
     - php: 5.6
-      env: WP_VERSION=4.0 COVERAGE=1 GRUNT=1
-    - php: 7.0
-      env: WP_VERSION=4.0
-    - php: hhvm
-      env: WP_VERSION=4.0
+      env: WP_MULTISITE=1
+    - php: 5.6
+      env: WP_VERSION=4.8
+    - php: 5.6
+      env: WP_VERSION=4.7 COVERAGE=1 GRUNT=1
   fast_finish: true
+  allow_failures:
+    - php: hhvm
+    - php: nightly
 
 cache:
   directories:
@@ -28,11 +36,31 @@ cache:
     - vendor
     - $HOME/.composer/cache
 
+before_install:
+  # Install latest version of Node.js (https://github.com/creationix/nvm).
+  - if [ "${TRAVIS_DIST_PRECISE}" == "1" ]; then nvm install node; fi
+  # Create database for PHPUnit tests.
+  - mysql -e 'CREATE DATABASE wp_phpunit_tests;'
+
+install:
+  # Install Grunt command line interface (https://github.com/gruntjs/grunt-cli).
+  - npm install -g grunt-cli
+  # Install Node.js packages.
+  - npm install
+  # Update Composer itself to the latest version (https://getcomposer.org/doc/03-cli.md#self-update-selfupdate-).
+  - composer self-update
+  # Install Composer packages.
+  - composer install
+
 before_script:
-  - bash bin/travis-before_script
+  - wget https://raw.githubusercontent.com/wp-cli/sample-plugin/master/bin/install-wp-tests.sh
+  - bash install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
 
 script:
-  - bash bin/travis-script
+  - if [[ -z "$GRUNT" ]]; then grunt phpunit; fi
+  - if [[ -z "$GRUNT" ]]; then grunt phplint; fi
+  - if [[ "$GRUNT" == "1" ]]; then grunt; fi
 
 after_success:
-  - bash bin/travis-after_success
+  - if [ $COVERAGE == "1" ]; then php vendor/bin/coveralls -v; fi
+  - if [ $COVERAGE == "1" ]; then bash <(curl -s https://codecov.io/bash); fi
