--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
 		"php": "^5.3",
 		"justinrainbow/json-schema": "^5.2",
 		"pronamic/wp-money": "^1.2",
-		"wp-pay/core": "^2.1"
+		"wp-pay/core": "dev-develop as 2.1"
 	},
 	"require-dev": {
 		"dealerdirect/phpcodesniffer-composer-installer": "^0.5.0",
