--- a/composer.json
+++ b/composer.json
@@ -36,19 +36,26 @@
 	"require": {
 		"php": "^5.3",
 		"justinrainbow/json-schema": "^5.2",
-		"pronamic/wp-money": "^1.2",
 		"wp-pay/core": "dev-develop as 2.1"
 	},
 	"require-dev": {
-		"dealerdirect/phpcodesniffer-composer-installer": "^0.5.0",
-		"php-coveralls/php-coveralls": "^1.0",
-		"phpcompatibility/php-compatibility": "^9.0",
+		"dealerdirect/phpcodesniffer-composer-installer": "^0.5",
+		"php-coveralls/php-coveralls": "^1.1",
+		"phpcompatibility/php-compatibility": "^9.1",
 		"phpcompatibility/phpcompatibility-wp": "^2.0",
-		"phpmd/phpmd": "^2.2.3",
-		"phpunit/phpunit": "^4.5",
+		"phpmd/phpmd": "^2.4",
+		"phpunit/phpunit": "^4.8",
 		"roots/wordpress": "^5.0",
-		"squizlabs/php_codesniffer": "^2.7",
-		"wp-coding-standards/wpcs": "^1.1",
+		"squizlabs/php_codesniffer": "^2.9",
+		"wp-coding-standards/wpcs": "^1.2",
 		"wp-phpunit/wp-phpunit": "^5.0"
+	},
+	"scripts": {
+		"coveralls": "vendor/bin/coveralls -v",
+		"phpcbf": "vendor/bin/phpcbf",
+		"phpcs": "vendor/bin/phpcs -s -v",
+		"phplint": "ls src/**/*.php tests/**/*.php | xargs -n 1 -P 4 php -l",
+		"phpmd": "vendor/bin/phpmd src,tests text phpmd.ruleset.xml --suffixes php",
+		"phpunit": "vendor/bin/phpunit"
 	}
 }
