--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -31,10 +31,11 @@
 		<exclude name="WordPress.Files.FileName.InvalidClassFileName"/>
 		<exclude name="WordPress.Files.FileName.NotHyphenatedLowercase"/>
 
+        <exclude name="WordPress.NamingConventions.ValidVariableName.NotSnakeCaseMemberVar" />
+
 		<exclude name="WordPress.Security.SafeRedirect.wp_redirect_wp_redirect"/>
 
-		<exclude name="WordPress.VIP.RestrictedFunctions.file_get_contents" />
-		<exclude name="WordPress.VIP.RestrictedFunctions.wp_remote_get" />
+		<exclude name="WordPress.WP.AlternativeFunctions.file_get_contents_file_get_contents" />
 	</rule>
 
 	<rule ref="WordPress.NamingConventions.ValidVariableName.NotSnakeCaseMemberVar">
