--- a/composer.json
+++ b/composer.json
@@ -31,11 +31,13 @@
 	"config": {
 		"platform": {
 			"php": "5.3.3"
-		}
+		},
+		"sort-packages": true
 	},
 	"require": {
 		"php": "^5.3",
 		"justinrainbow/json-schema": "^5.2",
+		"pronamic/wp-money": "dev-develop as 1.3",
 		"wp-pay/core": "dev-develop as 2.1"
 	},
 	"require-dev": {
