--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ env:
 jobs:
   include:
     - php: 7.3
-      env: WP_VERSION=^5.0 COVERAGE=1 PHPCS=1
+      env: WP_VERSION=^5.0 COVERAGE=1 PHPCS=1 PHPSTAN=1 PSALM=1
     - php: 7.2
       env: WP_VERSION=^4.9
     - php: 7.2
@@ -22,11 +22,7 @@ jobs:
     - php: 7.3
       env: WP_MULTISITE=1
     - php: 7.3
-      env: PHPSTAN=1
-    - php: 7.3
       env: PHPMD=1
-    - php: 7.3
-      env: PSALM=1
     - php: 7.2
     - php: 7.1
     - php: 7.0
@@ -42,7 +38,6 @@ jobs:
     - php: hhvm
     - php: nightly
     - env: PHPMD=1
-    - env: PSALM=1
 
 cache:
   directories:
