--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,7 @@
 	},
 	"require": {
 		"php": "^5.3",
+		"ext-intl": "*",
 		"justinrainbow/json-schema": "^5.2",
 		"pronamic/wp-money": "dev-develop as 1.3",
 		"wp-pay/core": "dev-develop as 2.1"
