--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,7 @@
 		"php": "^5.3",
 		"ext-intl": "*",
 		"justinrainbow/json-schema": "^5.2",
-		"pronamic/wp-money": "dev-develop as 1.3",
+		"pronamic/wp-money": "^1.2",
 		"wp-pay/core": "dev-develop as 2.1"
 	},
 	"require-dev": {
