--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
 		"ext-intl": "*",
 		"justinrainbow/json-schema": "^5.2",
 		"pronamic/wp-money": "dev-develop as 1.3",
-		"wp-pay/core": "dev-develop as 2.1"
+		"wp-pay/core": "^2.1"
 	},
 	"require-dev": {
 		"dealerdirect/phpcodesniffer-composer-installer": "^0.5",
