--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,9 @@ env:
 jobs:
   include:
     - php: 7.3
-      env: WP_VERSION=^5.0 COVERAGE=1 PHPCS=1 PHPSTAN=1 PSALM=1
+      env: WP_VERSION=^5.1 COVERAGE=1 PHPCS=1 PHPSTAN=1 PSALM=1
+    - php: 7.3
+      env: WP_VERSION=^5.0
     - php: 7.2
       env: WP_VERSION=^4.9
     - php: 7.2
