--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ env:
 jobs:
   include:
     - php: 7.3
-      env: WP_VERSION=^5.1 COVERAGE=1 PHPCS=1 PHPSTAN=1 PSALM=1
+      env: WP_VERSION=^5.1 COVERAGE=1 PHPCS=1 PHPSTAN=1 PSALM=1 SYMFONY_SECURITY_CHECK=1
     - php: 7.3
       env: WP_VERSION=^5.0
     - php: 7.2
@@ -35,11 +35,6 @@ jobs:
     - php: 7.1
     - php: 7.0
     - php: 5.6
-    - php: 5.5
-    - php: 5.4
-    - php: 5.3
-      dist: precise
-      env: TRAVIS_DIST_PRECISE=1
     - php: nightly
     - php: hhvm
   allow_failures:
@@ -54,8 +49,6 @@ cache:
     - $HOME/.composer/cache
 
 before_install:
-  # Install latest version of Node.js (https://github.com/creationix/nvm).
-  - if [ "${TRAVIS_DIST_PRECISE}" == "1" ]; then nvm install node; fi
   # Create database for PHPUnit tests.
   - mysql -e 'CREATE DATABASE wp_phpunit_tests;'
   # Remove Xdebug for a huge performance increase:
@@ -73,6 +66,12 @@ before_install:
   - if [ "$PHPSTAN" == "1" ]; then composer global require phpstan/phpstan; fi
   # Psalm
   - if [ "$PSALM" == "1" ]; then composer global require vimeo/psalm; fi
+  # Symfony Security Check
+  - |
+    if [ "$SYMFONY_SECURITY_CHECK" == "1" ]; then
+      curl -sS https://get.symfony.com/cli/installer | bash
+      export PATH="$HOME/.symfony/bin:$PATH"
+    fi
 
 install:
   # Install Grunt command line interface (https://github.com/gruntjs/grunt-cli).
@@ -109,6 +108,8 @@ script:
   - if [ "$PHPSTAN" == "1" ]; then phpstan analyze; fi
   # Psalm
   - if [ "$PSALM" == "1" ]; then psalm; fi
+  # Symfony Security Check
+  - if [ "$SYMFONY_SECURITY_CHECK" == "1" ]; then symfony security:check; fi
   # xmllint
   - composer run-script xmllint
 
