--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -5,8 +5,6 @@ build:
       WP_TESTS_DB_USER: 'root'
       WP_TESTS_DB_PASS: ''
       WP_TESTS_DB_HOST: 'localhost'
-    php:
-      version: 5.6.20
   project_setup:
     before:
       - mysql -e "CREATE DATABASE wp_phpunit_tests"
@@ -16,6 +14,9 @@ build:
   nodes:
     coverage:
       tests:
+        environment:
+          php:
+            version: 5.6.20
         override:
           - command: ./vendor/bin/phpunit
             coverage:
