--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
 		"ext-intl": "*",
 		"justinrainbow/json-schema": "^5.2",
 		"pronamic/wp-money": "^1.2",
-		"wp-pay/core": "dev-develop as 2.2"
+		"wp-pay/core": "^2.1"
 	},
 	"require-dev": {
 		"dealerdirect/phpcodesniffer-composer-installer": "^0.5.0",
