Fixed some issues.

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,9 @@ env:
 jobs:
   include:
     - php: 7.3
-      env: WP_VERSION=^5.1 COVERAGE=1 PHPCS=1 PHPSTAN=1 PSALM=1 SYMFONY_SECURITY_CHECK=1
+      env: WP_VERSION=^5.2 COVERAGE=1 PHPCS=1 PHPSTAN=1 PSALM=1 SYMFONY_SECURITY_CHECK=1
+    - php: 7.3
+      env: WP_VERSION=^5.1
     - php: 7.3
       env: WP_VERSION=^5.0
     - php: 7.2
