--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
 		"php": ">=5.6.0",
 		"ext-intl": "*",
 		"justinrainbow/json-schema": "^5.2",
-		"pronamic/wp-money": "^1.2",
+		"pronamic/wp-money": "dev-develop as 1.3",
 		"wp-pay/core": "dev-develop as 2.2"
 	},
 	"require-dev": {
@@ -46,10 +46,10 @@
 		"phpcompatibility/phpcompatibility-wp": "^2.0",
 		"phpmd/phpmd": "^2.6",
 		"phpunit/phpunit": "^5.7",
-		"roots/wordpress": "^5.1",
+		"roots/wordpress": "^5.2",
 		"squizlabs/php_codesniffer": "^3.4",
 		"wp-coding-standards/wpcs": "^2.1",
-		"wp-phpunit/wp-phpunit": "^5.1"
+		"wp-phpunit/wp-phpunit": "^5.2"
 	},
 	"scripts": {
 		"coveralls": "vendor/bin/coveralls -v",
