--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
 		"php": ">=5.6.20",
 		"ext-intl": "*",
 		"justinrainbow/json-schema": "^5.2",
-		"pronamic/wp-money": "dev-develop as 1.3",
+		"pronamic/wp-money": "^1.2",
 		"wp-pay/core": "dev-develop as 2.2"
 	},
 	"require-dev": {
