--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -5,7 +5,7 @@ build:
       WP_TESTS_DB_NAME: 'wp_phpunit_tests'
       WP_TESTS_DB_USER: 'root'
       WP_TESTS_DB_PASS: ''
-      WP_TESTS_DB_HOST: 'localhost'
+      WP_TESTS_DB_HOST: '127.0.0.1'
   project_setup:
     before:
       - mysql -e "CREATE DATABASE wp_phpunit_tests"
