--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -17,9 +17,8 @@ build:
       environment:
         php:
           version: 5.6.20
-      dependencies:
-          - pecl install xdebug
-          - echo "zend_extension=xdebug.so" > /home/scrutinizer/.phpenv/versions/5.6.20/etc/conf.d/xdebug.ini
+          pecl_extensions:
+            - xdebug
       tests:
         override:
           - command: ./vendor/bin/phpunit
