--- a/composer.json
+++ b/composer.json
@@ -48,6 +48,7 @@
 		"phpunit/phpunit": "^5.7",
 		"roots/wordpress": "^5.3",
 		"sirbrillig/phpcs-import-detection": "^1.2",
+		"sirbrillig/phpcs-variable-analysis": "^2.8",
 		"squizlabs/php_codesniffer": "^3.5",
 		"wp-coding-standards/wpcs": "^2.2",
 		"wp-phpunit/wp-phpunit": "^5.3"
