--- a/package.json
+++ b/package.json
@@ -31,11 +31,18 @@
     "url": "https://github.com/wp-pay-gateways/adyen/issues"
   },
   "homepage": "http://www.wp-pay.org/gateways/adyen/",
+  "scripts": {
+    "babel": "babel ./js/src -d ./js/dist"
+  },
   "devDependencies": {
+    "@babel/cli": "^7.8.3",
+    "@babel/core": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
     "grunt": "^1.0.4",
-    "grunt-phplint": "0.1.0",
-    "grunt-phpmd": "^0.1.1",
+    "grunt-babel": "^8.0.0",
+    "grunt-contrib-jshint": "^2.1.0",
     "grunt-phpcs": "^0.4.0",
-    "grunt-contrib-jshint": "^2.1.0"
+    "grunt-phplint": "0.1.0",
+    "grunt-phpmd": "^0.1.1"
   }
 }
