--- a/composer.json
+++ b/composer.json
@@ -45,6 +45,7 @@
 		"phpcompatibility/php-compatibility": "^9.3",
 		"phpcompatibility/phpcompatibility-wp": "^2.1",
 		"phpmd/phpmd": "^2.8",
+		"phpstan/phpstan": "^0.12.8",
 		"phpunit/phpunit": "^5.7",
 		"roots/wordpress": "^5.3",
 		"sirbrillig/phpcs-import-detection": "^1.2",
@@ -59,6 +60,7 @@
 		"phpcs": "vendor/bin/phpcs -s -v",
 		"phplint": "vendor/bin/phplint",
 		"phpmd": "vendor/bin/phpmd src,tests text phpmd.ruleset.xml --suffixes php",
+		"phpstan": "vendor/bin/phpstan analyse",
 		"phpunit": "vendor/bin/phpunit --colors=always",
 		"xmllint-phpcs": "xmllint --noout --schema vendor/squizlabs/php_codesniffer/phpcs.xsd phpcs.xml.dist",
 		"xmllint": [
