--- a/.travis.yml
+++ b/.travis.yml
@@ -64,6 +64,8 @@ before_install:
   - composer validate --strict
   # Add Composer global vendor/bin to path.
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
+  # Maybe remove PHPCS import detection package.
+  - if [ "$PHPCS" != "1" ]; then composer remove sirbrillig/phpcs-import-detection --dev --no-update; fi
   # PHPStan
   - if [ "$PHPSTAN" == "1" ]; then composer global require phpstan/phpstan; fi
   # Psalm
