--- a/.travis.yml
+++ b/.travis.yml
@@ -66,10 +66,6 @@ before_install:
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
   # Maybe remove PHPCS import detection package.
   - if [ "$PHPCS" != "1" ]; then composer remove sirbrillig/phpcs-import-detection --dev --no-update; fi
-  # PHPStan
-  - if [ "$PHPSTAN" == "1" ]; then composer global require phpstan/phpstan; fi
-  # Psalm
-  - if [ "$PSALM" == "1" ]; then composer global require vimeo/psalm; fi
   # Symfony Security Check
   - |
     if [ "$SYMFONY_SECURITY_CHECK" == "1" ]; then
@@ -86,6 +82,10 @@ install:
   - composer self-update
   # Install Composer packages.
   - composer install
+  # PHPStan
+  - if [ "$PHPSTAN" == "1" ]; then composer bin phpstan install; fi
+  # Psalm
+  - if [ "$PSALM" == "1" ]; then composer bin psalm install; fi
   # Test on specific WordPress version.
   - composer require --dev --update-with-dependencies roots/wordpress:${WP_VERSION} wp-phpunit/wp-phpunit:${WP_VERSION}
   # List available packages.
@@ -109,9 +109,9 @@ script:
   # PHP Mess Detector
   - if [ "$PHPMD" == "1" ]; then composer run-script phpmd; fi
   # PHPStan
-  - if [ "$PHPSTAN" == "1" ]; then phpstan analyze; fi
+  - if [ "$PHPSTAN" == "1" ]; then composer run-script phpstan; fi
   # Psalm
-  - if [ "$PSALM" == "1" ]; then psalm; fi
+  - if [ "$PSALM" == "1" ]; then composer run-script psalm; fi
   # Symfony Security Check
   - if [ "$SYMFONY_SECURITY_CHECK" == "1" ]; then symfony security:check; fi
   # xmllint
