--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,7 @@
 		"wp-pay/core": "dev-develop as 2.2.8"
 	},
 	"require-dev": {
+		"bamarni/composer-bin-plugin": "^1.3",
 		"dealerdirect/phpcodesniffer-composer-installer": "^0.6.0",
 		"overtrue/phplint": "^1.2",
 		"php-coveralls/php-coveralls": "^2.2",
@@ -60,6 +61,10 @@
 		"phplint": "vendor/bin/phplint",
 		"phpmd": "vendor/bin/phpmd src,tests text phpmd.ruleset.xml --suffixes php",
 		"phpunit": "vendor/bin/phpunit --colors=always",
+		"phpstan": "vendor/bin/phpstan analyse",
+		"post-install-cmd": "echo 'Optionally run: composer bin all install'",
+		"post-update-cmd": "echo 'Optionally run: composer bin all update'",
+		"psalm": "vendor/bin/psalm",
 		"xmllint-phpcs": "xmllint --noout --schema vendor/squizlabs/php_codesniffer/phpcs.xsd phpcs.xml.dist",
 		"xmllint": [
 			"@xmllint-phpcs"
