--- a/.phplint.yml
+++ b/.phplint.yml
@@ -1,4 +1,11 @@
-path: .
+path: ./
+jobs: 10
+cache: build/phplint.cache
+extensions:
+  - php
 exclude:
+  - build
+  - node_modules
   - vendor
+  - vendor-bin
   - wordpress
