--- a/composer.json
+++ b/composer.json
@@ -39,29 +39,29 @@
 		"wp-pay/core": "^2.4"
 	},
 	"require-dev": {
-		"bamarni/composer-bin-plugin": "^1.3",
-		"dealerdirect/phpcodesniffer-composer-installer": "^0.6.0",
+		"bamarni/composer-bin-plugin": "^1.4",
+		"dealerdirect/phpcodesniffer-composer-installer": "^0.7",
 		"overtrue/phplint": "^1.2",
 		"php-coveralls/php-coveralls": "^2.2",
 		"phpcompatibility/php-compatibility": "^9.3",
 		"phpcompatibility/phpcompatibility-wp": "^2.1",
 		"phpmd/phpmd": "^2.8",
 		"phpunit/phpunit": "^5.7",
-		"roots/wordpress": "^5.3",
+		"roots/wordpress": "^5.5",
 		"sirbrillig/phpcs-import-detection": "^1.2",
 		"sirbrillig/phpcs-variable-analysis": "^2.8",
 		"squizlabs/php_codesniffer": "^3.5",
-		"wp-coding-standards/wpcs": "^2.2",
-		"wp-phpunit/wp-phpunit": "^5.3"
+		"wp-coding-standards/wpcs": "^2.3",
+		"wp-phpunit/wp-phpunit": "^5.5"
 	},
 	"scripts": {
-		"coveralls": "vendor/bin/php-coveralls -v",
+		"coveralls": "vendor/bin/coveralls -v",
 		"phpcbf": "vendor/bin/phpcbf",
 		"phpcs": "vendor/bin/phpcs -s -v",
 		"phplint": "vendor/bin/phplint",
 		"phpmd": "vendor/bin/phpmd src,tests text phpmd.ruleset.xml --suffixes php",
-		"phpunit": "vendor/bin/phpunit --colors=always",
 		"phpstan": "vendor/bin/phpstan analyse",
+		"phpunit": "vendor/bin/phpunit",
 		"post-install-cmd": "echo 'Optionally run: composer bin all install'",
 		"post-update-cmd": "echo 'Optionally run: composer bin all update'",
 		"psalm": "vendor/bin/psalm",
