--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,18 @@
 *.http text eol=crlf
+/js/src            export-ignore
+/tests             export-ignore
+/vendor-bin        export-ignore
+/.babelrc          export-ignore
+/.eslintignore     export-ignore
+/.eslintrc         export-ignore
+/.gitattributes    export-ignore
+/.gitignore        export-ignore
+/.phplint.yml      export-ignore
+/.scrutinizer.yml  export-ignore
+/.travis.yml       export-ignore
+/package.json      export-ignore
+/phpcs.xml.dist    export-ignore
+/phpmd.ruleset.xml export-ignore
+/phpstan.neon.dist export-ignore
+/phpunit.xml.dist  export-ignore
+/psalm.xml.dist    export-ignore
