--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,7 @@
 		"bamarni/composer-bin-plugin": "^1.4",
 		"dealerdirect/phpcodesniffer-composer-installer": "^0.7",
 		"overtrue/phplint": "^1.2",
-		"php-coveralls/php-coveralls": "^2.2",
+		"php-coveralls/php-coveralls": "^2.4",
 		"phpcompatibility/php-compatibility": "^9.3",
 		"phpcompatibility/phpcompatibility-wp": "^2.1",
 		"phpmd/phpmd": "^2.8",
@@ -55,7 +55,7 @@
 		"wp-phpunit/wp-phpunit": "^5.6"
 	},
 	"scripts": {
-		"coveralls": "vendor/bin/coveralls -v",
+		"coveralls": "vendor/bin/php-coveralls -v",
 		"phpcbf": "vendor/bin/phpcbf",
 		"phpcs": "vendor/bin/phpcs -s -v",
 		"phplint": "vendor/bin/phplint",
