--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
 		"php": ">=5.6.20",
 		"ext-intl": "*",
 		"justinrainbow/json-schema": "^5.2",
-		"pronamic/wp-http": "dev-main",
+		"pronamic/wp-http": "^1.0",
 		"pronamic/wp-money": "^1.2",
 		"wp-pay/core": "^2.6"
 	},
