--- a/composer.json
+++ b/composer.json
@@ -71,7 +71,7 @@
 			"@xmllint-phpcs"
 		],
 		"build-docs": [
-			"vendor/bin/wp-documentor parse src --format=markdown --relative=docs > docs/hooks.md"
+			"vendor/bin/wp-documentor parse . --exclude=tests --exclude=vendor --exclude=wordpress --format=markdown --relative=docs > docs/hooks.md"
 		]
 	}
 }
