--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -1,35 +1,24 @@
 <?xml version="1.0"?>
 
 <ruleset name="WordPress Pay Gateway: Adyen rules">
-	<config name="minimum_supported_wp_version" value="4.7"/>
-
-	<config name="testVersion" value="5.6-"/>
-
 	<file>.</file>
 
-	<arg name="colors"/>
-	<arg name="extensions" value="php"/>
-	<arg name="parallel" value="8" />
-	<arg value="sp"/>
-
-	<exclude-pattern>node_modules/*</exclude-pattern>
 	<exclude-pattern>tests/bootstrap.php</exclude-pattern>
 	<exclude-pattern>tests/wp-config.php</exclude-pattern>
-	<exclude-pattern>vendor/*</exclude-pattern>
-	<exclude-pattern>wordpress/*</exclude-pattern>
-	<exclude-pattern type="relative">^wp-content/*</exclude-pattern>
 
 	<rule ref="VariableAnalysis"/>
 
-	<rule ref="PHPCompatibilityWP"/>
-
-	<rule ref="WordPress">
+	<rule ref="PronamicWP">
 		<exclude name="WordPress.DB.SlowDBQuery.slow_db_query_meta_key"/>
 
 		<exclude name="WordPress.Files.FileName.InvalidClassFileName"/>
 		<exclude name="WordPress.Files.FileName.NotHyphenatedLowercase"/>
 
 		<exclude name="WordPress.Security.SafeRedirect.wp_redirect_wp_redirect"/>
+
+		<exclude name="WordPressVIPMinimum.Functions.RestrictedFunctions.file_ops_fwrite" />
+		<exclude name="WordPressVIPMinimum.Functions.RestrictedFunctions.wp_remote_get_wp_remote_get" />
+		<exclude name="WordPressVIPMinimum.Performance.FetchingRemoteData.FileGetContentsUnknown" />
 	</rule>
 
 	<rule ref="VariableAnalysis.CodeAnalysis.VariableAnalysis.UndefinedVariable">
