--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "adyen",
-  "version": "4.0.0-RC-2",
+  "version": "4.0.0",
   "description": "Adyen driver for the WordPress payment processing library.",
   "repository": {
     "type": "git",
