--- a/composer.json
+++ b/composer.json
@@ -38,24 +38,23 @@
 		}
 	},
 	"require": {
-		"php": ">=5.6.20",
+		"php": ">=8.0",
 		"ext-intl": "*",
 		"justinrainbow/json-schema": "^5.2",
 		"pronamic/wp-http": "^1.0",
 		"pronamic/wp-money": "^2.0",
-		"wp-pay/core": "^4.5"
+		"wp-pay/core": "dev-develop"
 	},
 	"require-dev": {
 		"bamarni/composer-bin-plugin": "^1.4",
 		"overtrue/phplint": "^1.2",
 		"php-coveralls/php-coveralls": "^2.4",
 		"phpmd/phpmd": "^2.8",
-		"phpunit/phpunit": "^5.7",
-		"pronamic/wp-coding-standards": "^1.0",
-		"roots/wordpress": "^5.8",
+		"pronamic/wp-coding-standards": "^1.3",
+		"roots/wordpress": "^6.0",
 		"sirbrillig/phpcs-import-detection": "^1.2",
 		"sirbrillig/phpcs-variable-analysis": "^2.8",
-		"wp-phpunit/wp-phpunit": "^5.8",
+		"wp-phpunit/wp-phpunit": "^6.1",
 		"yoast/phpunit-polyfills": "^1.0"
 	},
 	"scripts": {
