--- a/composer.json
+++ b/composer.json
@@ -51,6 +51,7 @@
 		"php-coveralls/php-coveralls": "^2.4",
 		"phpmd/phpmd": "^2.8",
 		"pronamic/wp-coding-standards": "^1.3",
+		"pronamic/wp-deployer": "dev-develop",
 		"roots/wordpress": "^6.0",
 		"sirbrillig/phpcs-import-detection": "^1.2",
 		"sirbrillig/phpcs-variable-analysis": "^2.8",
