--- a/composer.json
+++ b/composer.json
@@ -47,11 +47,11 @@
 	},
 	"require-dev": {
 		"bamarni/composer-bin-plugin": "^1.4",
-		"overtrue/phplint": "^1.2",
-		"php-coveralls/php-coveralls": "^2.4",
+		"overtrue/phplint": "^5.3",
+		"php-coveralls/php-coveralls": "^2.5",
 		"phpmd/phpmd": "^2.8",
 		"pronamic/wp-coding-standards": "^1.3",
-		"pronamic/wp-deployer": "dev-develop",
+		"pronamic/wp-deployer": "^1.1",
 		"roots/wordpress": "^6.0",
 		"sirbrillig/phpcs-import-detection": "^1.2",
 		"sirbrillig/phpcs-variable-analysis": "^2.8",
