--- a/composer.json
+++ b/composer.json
@@ -41,9 +41,9 @@
 		"php": ">=8.0",
 		"ext-intl": "*",
 		"justinrainbow/json-schema": "^5.2",
-		"pronamic/wp-http": "^1.0",
-		"pronamic/wp-money": "^2.0",
-		"wp-pay/core": "dev-develop"
+		"pronamic/wp-http": "^1.2",
+		"pronamic/wp-money": "^2.2",
+		"wp-pay/core": "^4.6"
 	},
 	"require-dev": {
 		"bamarni/composer-bin-plugin": "^1.4",
