--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
 	"keywords": ["wordpress", "wp", "pay", "adyen", "gateway", "pronamic"],
 	"homepage": "http://www.wp-pay.org/gateways/adyen/",
 	"license": "GPL-3.0-or-later",
+	"type": "wordpress-plugin",
 	"authors": [
 		{
 			"name": "Pronamic",
