--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,7 @@
 		"justinrainbow/json-schema": "^5.2",
 		"pronamic/wp-http": "^1.2",
 		"pronamic/wp-money": "^2.2",
-		"wp-pay/core": "dev-develop as 4.6"
+		"wp-pay/core": "^4.8"
 	},
 	"require-dev": {
 		"bamarni/composer-bin-plugin": "^1.4",
