--- a/.gitattributes
+++ b/.gitattributes
@@ -7,7 +7,7 @@
 /.eslintignore     export-ignore
 /.eslintrc         export-ignore
 /.gitattributes    export-ignore
-/.github/          export-ignore
+/.github           export-ignore
 /.gitignore        export-ignore
 /.phplint.yml      export-ignore
 /.scrutinizer.yml  export-ignore
