--- a/composer.json
+++ b/composer.json
@@ -53,8 +53,8 @@
 		"overtrue/phplint": "^4.5",
 		"php-coveralls/php-coveralls": "^2.5",
 		"phpmd/phpmd": "^2.13",
+		"pronamic/pronamic-cli": "^1.0",
 		"pronamic/wp-coding-standards": "^1.3",
-		"pronamic/wp-deployer": "^1.2",
 		"roots/wordpress": "^6.0",
 		"sirbrillig/phpcs-import-detection": "^1.2",
 		"sirbrillig/phpcs-variable-analysis": "^2.8",
