--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,14 @@
 {
 	"name": "wp-pay-gateways/adyen",
 	"description": "Adyen driver for the WordPress payment processing library.",
-	"keywords": ["wordpress", "wp", "pay", "adyen", "gateway", "pronamic"],
+	"keywords": [
+		"wordpress",
+		"wp",
+		"pay",
+		"adyen",
+		"gateway",
+		"pronamic"
+	],
 	"homepage": "http://www.wp-pay.org/gateways/adyen/",
 	"license": "GPL-3.0-or-later",
 	"type": "wordpress-plugin",
