--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"@babel/cli": "^7.23.4",
 		"@babel/core": "^7.23.7",
 		"@babel/preset-env": "^7.23.8",
+		"@wordpress/env": "^9.1.0",
 		"eslint": "^8.56.0",
 		"eslint-plugin-json": "^3.1.0"
 	}
