--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"@babel/core": "^7.23.7",
 		"@babel/preset-env": "^7.23.8",
 		"@wordpress/env": "^9.1.0",
+		"@wordpress/scripts": "^27.0.0",
 		"eslint": "^8.56.0",
 		"eslint-plugin-json": "^3.1.0"
 	}
