--- a/package.json
+++ b/package.json
@@ -32,17 +32,15 @@
 		"url": "https://github.com/wp-pay-gateways/adyen/issues"
 	},
 	"devDependencies": {
-		"@babel/cli": "^7.23.4",
-		"@babel/core": "^7.23.7",
-		"@babel/preset-env": "^7.23.8",
 		"@wordpress/env": "^9.1.0",
 		"@wordpress/scripts": "^27.0.0",
-		"eslint": "^8.56.0",
-		"eslint-plugin-json": "^3.1.0"
+		"prettier": "npm:wp-prettier@^3.0.3"
 	},
+	"prettier": "@wordpress/prettier-config",
 	"scripts": {
-		"babel": "babel ./js/src -d ./js/dist --source-maps",
-		"eslint": "eslint . --ext .json --ext .js",
+		"build": "wp-scripts build js/src/checkout-drop-in.js --output-path=js/dist",
+		"start": "wp-scripts start js/src/checkout-drop-in.js --output-path=js/dist",
+		"lint-js": "wp-scripts lint-js js/src",
 		"lint-pkg-json": "wp-scripts lint-pkg-json"
 	}
 }
