--- a/composer.json
+++ b/composer.json
@@ -45,6 +45,9 @@
 			"bamarni/composer-bin-plugin": true,
 			"automattic/jetpack-autoloader": true
 		},
+		"platform": {
+			"php": "8.2"
+		},
 		"wp-slug": "pronamic-pay-adyen"
 	},
 	"require": {
