--- a/composer.json
+++ b/composer.json
@@ -51,7 +51,7 @@
 		"wp-slug": "pronamic-pay-adyen"
 	},
 	"require": {
-		"php": ">=7.4",
+		"php": ">=8.2",
 		"ext-intl": "*",
 		"automattic/jetpack-autoloader": "^3.0 || ^4.0 || ^5.0",
 		"justinrainbow/json-schema": "^5.2",
@@ -61,24 +61,37 @@
 	},
 	"require-dev": {
 		"bamarni/composer-bin-plugin": "^1.4",
-		"overtrue/phplint": "^4.5",
+		"overtrue/phplint": "^9.0",
 		"php-coveralls/php-coveralls": "^2.5",
 		"phpmd/phpmd": "^2.13",
-		"phpstan/phpstan": "^1.11",
+		"phpstan/phpstan": "^2.1",
 		"pronamic/pronamic-cli": "^1.1",
 		"pronamic/wp-coding-standards": "^2.1",
 		"roots/wordpress": "^6.0",
 		"sirbrillig/phpcs-import-detection": "^1.2",
 		"sirbrillig/phpcs-variable-analysis": "^2.8",
-		"szepeviktor/phpstan-wordpress": "^1.3",
+		"szepeviktor/phpstan-wordpress": "^2.0",
 		"vimeo/psalm": "^5.25",
 		"wp-cli/dist-archive-command": "*",
 		"wp-cli/wp-cli-bundle": "*",
 		"wp-phpunit/wp-phpunit": "^6.1",
-		"yoast/phpunit-polyfills": "^1.0"
+		"yoast/phpunit-polyfills": "^4.0"
 	},
 	"scripts": {
-		"build": "vendor/bin/pronamic wp-build",
+		"build": [
+			"rm -rf ./build",
+			"mkdir ./build",
+			"mkdir ./build/stage-1",
+			"mkdir ./build/stage-2",
+			"npm run build",
+			"rsync --recursive --verbose --exclude-from=.distignore --exclude=/vendor/ ./ ./build/stage-1/",
+			"composer install --no-dev --prefer-dist --optimize-autoloader --working-dir=./build/stage-1/",
+			"rsync --recursive --verbose --exclude-from=.distignore ./build/stage-1/ ./build/stage-2/",
+			"vendor/bin/wp i18n make-pot ./build/stage-2/ --slug=pronamic-pay-adyen",
+			"vendor/bin/wp i18n make-json ./build/stage-2/languages/*.po --no-purge",
+			"vendor/bin/wp i18n make-mo ./build/stage-2/languages/",
+			"vendor/bin/wp dist-archive ./build/stage-2/ --plugin-dirname=pronamic-pay-adyen"
+		],
 		"build-docs": "vendor/bin/wp-documentor parse . --exclude=build --exclude=tests --exclude=vendor --exclude=wordpress --exclude=wp-content --format=markdown --relative=docs > docs/hooks.md",
 		"ci": [
 			"@phplint",
@@ -103,13 +116,8 @@
 		],
 		"translate": [
 			"@build",
-			"rsync --recursive --delete --verbose ./build/project/languages/ ./languages/"
-		],
-		"version": "@build",
-		"release": [
-			"@build",
-			"vendor/bin/pronamic release-to-github",
-			"vendor/bin/pronamic release-to-pronamic"
+			"rsync --recursive --delete --verbose ./build/stage-2/languages/ ./languages/",
+			"vendor/bin/wp i18n update-po ./languages/pronamic-pay-adyen.pot"
 		]
 	}
 }
