--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
 		"start": "wp-scripts start js/src/checkout-drop-in.js --output-path=js/dist",
 		"lint-js": "wp-scripts lint-js js/src",
 		"lint-pkg-json": "wp-scripts lint-pkg-json"
+	},
+	"dependencies": {
+		"@adyen/adyen-web": "^6.22.0"
 	}
 }
