--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "adyen",
-	"version": "4.7.0",
+	"version": "4.8.0-rc.1",
 	"description": "Adyen driver for the WordPress payment processing library.",
 	"author": {
 		"name": "Pronamic",
